tests/pass/check/imported_global_namespace/UI.kira
annotation State {
}

annotation Doc {
    parameters {
        text: String
    }
}

construct Widget {
    annotations {
        @State;
        @Doc;
    }

    requires {
        content;
    }

    lifecycle {
        onAppear() {}
    }
}

Widget Card(title: String) {
    @State
    let selected: Int = 0;

    content {
        "Card"
    }

    onAppear() {
        return;
    }
}
