tests/fail/semantics/unknown_annotation_parameter/main.kira
annotation Attribute {
    parameters {
        index: Int
    }
}

construct Widget {
    annotations {
        @Attribute;
    }

    requires {
        content;
    }
}

Widget Button() {
    @Attribute(offset: 0)
    let position: Float = 0.0;

    content {
    }
}

@Main
function entry() {
    return;
}
